# peri-hub

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.claude/: settings.json  settings.local.json
.github/workflows/: release-macos-signed.yml
scripts/: export-dmg.sh  generate-dmg-background.swift  release-macos-unsigned.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  system.rs
src-tauri/src/ddc/: controls.rs  mod.rs
src-tauri/src/monitor/: brightness.rs  detect.rs  display_mode.rs  mod.rs
src-tauri/src/mouse/: detect.rs  mod.rs
src/components/: Collapsible.tsx  DeviceProvider.tsx  ThemeProvider.tsx  VcpSlider.tsx
src/components/Sidebar/: LanguageToggle.tsx  NavItem.tsx  ThemeToggle.tsx  index.tsx
src/hooks/: useDevices.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  zh.json
src/layouts/: AppLayout.tsx
src/pages/MonitorDetailPage/: ResolutionPanel.tsx  VcpControlsSection.tsx  index.tsx
src/pages/MonitorPage/: BrightnessSlider.tsx  MonitorCard.tsx  index.tsx
src/pages/MousePage/: MouseCard.tsx  index.tsx
src/pages/SettingsPage/: index.tsx
src/types/: device.ts  i18n.ts
